[package]
name = "staff"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "staff"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
crossterm = "0.28"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
unicode-width = "0.2"
